# juniper-archive

./: README.md
ansible/ansible-ee-juniper-apstra/: README.md  execution-environment.yml  pyproject.toml  requirements.yml
ansible/ansible-ee-mist-netbox/: README.md  pyproject.toml  requirements.yml
ansible/ansible-ee-mist-netbox/context/_build/: requirements_combined.txt
ansible/ansible-ee-netbox-inventory/: .gitignore  README.md  execution-environment.yml  pyproject.toml  requirements.yml
ansible/ansible-ee-vsrx-vmware/: README.md  execution-environment.yml  pyproject.toml  requirements.txt
ansible/ansible-ee-vsrx-vmware/context/: Dockerfile
ansible/ansible-ee-vsrx-vmware/context/_build/: requirements.yml  requirements_combined.txt
ansible/apstra-ansible-collection/: .gitignore  mkdocs.yml  pyproject.toml  tasks.py
ansible/apstra-ansible-collection/.github/: design.md.j2  index.md.j2  resources.md.j2  test.yml
ansible/apstra-ansible-collection/.github/workflows/: website.yml
ansible/apstra-ansible-collection/cdot65/apstra/: README.md  galaxy.yml
ansible/apstra-ansible-collection/docker/: Dockerfile
ansible/apstra-ansible-collection/docs/stylesheets/: cdot65.css
ansible/apstra-servicenow-demo/: .gitignore  README.md  mkdocs.yml  pyproject.toml  servicenow.code-workspace  tasks.py
ansible/apstra-servicenow-demo/.github/: blueprint.md.j2  blueprint.py  design.py  index.md.j2  index.py
ansible/apstra-servicenow-demo/files/ansible/: blueprint.generator.yaml  create.vlans.yaml  manage.vlans.yaml  slackbot.health.yaml
ansible/apstra-servicenow-demo/files/docker/: Dockerfile  ansible.cfg  inventory.yaml
ansible/deploy-vsrx-on-vmware/: README.md  ansible.cfg  pyproject.toml  tasks.py
ansible/deploy-vsrx-on-vmware/ansible/: deploy.vsrx.yaml  inventory.yaml
ansible/deploy-vsrx-on-vmware/ansible/config/: vsrx-01.conf
ansible/deploy-vsrx-on-vmware/ansible/tmp/: ansible-test.conf
ansible/deploy-vsrx-on-vmware/docker/: Dockerfile  requirements.txt
ansible/deploy-vsrx-on-vmware/docs/: pb.deploy.vsrx.rst
ansible/juniper-srx-configuration-with-ansible/: .gitignore  LICENSE  Makefile  README.md  ansible.cfg  pyproject.toml
ansible/juniper-srx-configuration-with-ansible/files/ansible/: ansible.cfg  arp.yaml  inventory.yaml  pb.configuration.bootstrap.yaml  pb.configuration.build.yaml
ansible/juniper-srx-configuration-with-ansible/roles/: requirements.yml
ansible/juniper-upgrade-software/: .gitignore  README.md  pyproject.toml  tasks.py
ansible/juniper-upgrade-software/ansible/: ansible.cfg  inventory.yaml  pb.junos.upgrade.yaml
ansible/juniper-upgrade-software/docker/ansible/: Dockerfile  requirements.txt
ansible/juniper-upgrade-software/docker/fileserver/: Dockerfile  requirements.txt
ansible/juniper-upgrade-software/docs/: execute_with_docker.rst  execute_with_python.rst  inventory.rst  pb.junos.upgrade.yaml.rst
ansible/juniper-upgrade-software/python/pyez/: app.py
ansible/juniper-vxlan-evpn-crb/: .gitignore  README.md  pyproject.toml  tasks.py
ansible/juniper-vxlan-evpn-crb/files/ansible/: inventory.yml  pb.awx.test.environmentals.yml  pb.configuration.apply.yml  pb.configuration.backup.yml  pb.configuration.bootstrap.yml  pb.configuration.build.yml  pb.configuration.diff.yml  pb.configuration.golden.diff.yml  pb.configuration.network.yml  pb.netbox.retrieve.info.yml
ansible/juniper-vxlan-evpn-crb/files/docker/: Dockerfile
ansible/juniper-vxlan-evpn-crb/files/eve-ng_lab/: Collapsed Core.unl
ansible/juniper-vxlan-evpn-dc-erb/: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  tasks.py
ansible/juniper-vxlan-evpn-dc-erb-alternative/: .gitignore  README.md  ansible.cfg  pyproject.toml  tasks.py
ansible/juniper-vxlan-evpn-dc-erb-alternative/files/ansible/: pb.configuration.apply.yaml  pb.configuration.bootstrap.yaml
ansible/juniper-vxlan-evpn-dc-erb-alternative/files/docker/: Dockerfile  ansible.cfg  inventory.yaml
ansible/juniper-vxlan-evpn-dc-erb/docs/: pb.configuration.build.rst
ansible/juniper-vxlan-evpn-dc-erb/files/ansible/: ansible.cfg  inventory.yaml  pb.configuration.apply.yaml  pb.configuration.bootstrap.yaml  pb.configuration.build.yaml  pb.configuration.diff.yaml
ansible/junos-set-config-with-ansible/: .gitignore  README.md  ansible.cfg  pyproject.toml  tasks.py
ansible/junos-set-config-with-ansible/files/ansible/: ansible.cfg  pb.configure.yaml
ansible/junos-set-config-with-ansible/files/docker/: inventory.yaml
ansible/mist-ansible-collection/: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  tasks.py
ansible/mist-ansible-collection/.github/: blueprint.md.j2  design.md.j2  index.md.j2  index.py  resources.md.j2  resources.py  test.yml
ansible/mist-ansible-collection/cdot65/mist/: galaxy.yml
ansible/mist-ansible-collection/docker/: Dockerfile  ansible.cfg  inventory.yaml
ansible/retrieve-configuration-with-ansible/: .gitignore  Makefile  README.md  pyproject.toml  tasks.py
ansible/retrieve-configuration-with-ansible/files/ansible/: inventory.yaml  pb.config.download.vars.yaml  pb.config.download.yaml  pb.config.send.to.pinecone.yaml
ansible/security-director-cloud-ansible-collection/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  tasks.py
ansible/security-director-cloud-ansible-collection/docker/: Dockerfile  ansible.cfg  inventory.yaml
ansible/upgrade-junos-software-with-ansible/: README.md  ansible.cfg  pyproject.toml  tasks.py
python/SRX-configure-security-policies/: .gitignore  README.md  pyproject.toml  tasks.py
python/configure-syslog-with-python/: README.md  pyproject.toml
python/juniper-mist-kentic-webhooks/: .gitignore  DC80-EX4100-1.json  DC80-EX4100-2.json  app.py  config.yaml  mist.py  pyproject.toml  webhook.py
python/juniper-snmp-script/: app.py  pylintrc   pyproject.toml  test.py
python/juniper-srx-configuration-with-python/: pyproject.toml  working.conf
python/retrieve-interface-information-with-python/: README.md  pyproject.toml  tasks.py
python/retrieve-srx-security-zones-with-scrapli/: README.md  pyproject.toml
(+1254 files in other folders)
