[tool.poetry]
name = "ansible-ee-netbox-inventory"
version = "0.1.0"
description = "Dynamic Inventory between Netbox and Ansible AWX"
authors = ["Calvin Remsburg <cremsburg@protonmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible-builder = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
