[tool.poetry]
name = "ansible-ee-vsrx-vmware"
version = "0.0.1"
description = "VMware and Netbox EE for Ansible AWX"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible-builder = "^0.6.0"
junos-eznc = "2.6.4"
jsnapy = "^1.3.7"
jxmlease = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
