[tool.poetry]
name = "apstra-servicenow-demo"
version = "0.1.0"
description = "Apstra ServiceNow demonstration"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^3.3.0"
junos-eznc = "^2.6.0"
jsnapy = "^1.3.6"
jxmlease = "^1.0.3"
pynautobot = "^1.0.2"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
