[tool.poetry]
name = "deploy-vsrx-on-vmware"
version = "0.1.0"
description = "Ansible playbook to push a new vSRX on VMware vCenter and configure basic parameters on the firewall"
authors = ["Calvin Remsburg <cremsburg@protonmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^6.1.0"
junos-eznc = "^2.6.0"
jsnapy = "^1.3.6"
jxmlease = "^1.0.3"
invoke = "^1.5.0"
pyvmomi = "^7.0.2"

[tool.poetry.dev-dependencies]
invoke = "^1.7.1"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
