[tool.poetry]
name = "juniper-srx-configuration-with-ansible"
version = "0.1.0"
description = ""
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.1.0"
junos-eznc = "^2.6.3"
jsnapy = "^1.3.6"
jxmlease = "^1.0.3"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
