[tool.poetry]
name = "juniper-upgrade-software"
version = "0.1.0"
description = "Use Python or Ansible to upgrade JunOS."
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^3.3.0"
junos-eznc = "^2.6.0"
jsnapy = "^1.3.6"
jxmlease = "^1.0.3"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
xmltodict = "^0.13.0"
ansible-navigator = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
invoke = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
