[tool.poetry]
name = "mist-ansible-collection"
version = "0.1.0"
description = "Ansible collection builder"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.5.0"
ansible = "^5.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
pylint = "^2.12.2"
flake8 = "^4.0.1"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
