[tool.poetry]
name = "retrieve-configuration"
version = "0.1.0"
description = "Ansible retrieve configurations"
authors = ["Calvin Remsburg"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.0.0"
invoke = "^1.5.0"
junos-eznc = "^2.6.1"
jxmlease = "^1.0.3"
jsnapy = "^1.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
