[tool.poetry]
name = "sdcloud-ansible-collection"
version = "0.1.0"
description = "Ansible collection builder"
authors = ["Calvin Remsburg <cremsburg@protonmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.5.0"
ansible = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
