[tool.poetry]
name = "software-upgrade"
version = "0.1.0"
description = "Juniper JunOS Upgrade Playbook"
authors = ["Calvin Remsburg <cremsburg@protonmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^3.3.0"
invoke = "^1.5.0"
junos-eznc = "^2.6.0"
jsnapy = "^1.3.6"
jxmlease = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
