[tool.poetry]
name = "configure-security-policies"
version = "0.1.0"
description = "Nornir project to automate the creation of security policies"
authors = ["Calvin Remsburg <cremsburg@protonmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
junos-eznc = "^2.6.3"
jxmlease = "^1.0.3"
invoke = "^1.6.0"
nornir-pyez = "^0.0.10"
rich = "^10.12.0"
nornir = "^3.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
