[tool.poetry]
name = "juniper-snmp-script"
version = "0.1.0"
description = "SNMP script development environment"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
junos-eznc = "^2.6.3"
jxmlease = "^1.0.3"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
