[tool.poetry]
name = "juniper-srx-configuration-with-python"
version = "0.1.0"
description = ""
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
junos-eznc = "^2.6.5"
jsnapy = "^1.3.7"
jxmlease = "^1.0.3"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.3"
flake8-black = "^0.3.3"
invoke = "^1.7.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
